k8s/test/mimir.deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "mimir"
  namespace: "abuse-api-test"
  labels:
    app: "mimir"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: "mimir"
  template:
    metadata:
      labels:
        app: "mimir"
    spec:
      imagePullSecrets:
        -
          name: "dcu-artifactory-creds"
      containers:
        -
          name: "mimir"
          imagePullPolicy: "Always"
          image: "docker-dcu-local.artifactory.secureserver.net/mimir:test"
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          env:
          - name: BUILD_DATE
            value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
          - name: sysenv
            value: test
          - name: DB_PASS
            valueFrom:
              secretKeyRef:
                name: db-phishstory-v2
                key: password
          - name: REDIS
            value: mimir-redis.abuse-api-test.svc.cluster.local
          - name: ELASTIC_APM_SERVER_URL
            valueFrom:
              secretKeyRef:
                name: apm-access
                key: url
          - name: ELASTIC_APM_SECRET_TOKEN
            valueFrom:
              secretKeyRef:
                name: apm-access
                key: secret
