k8s/test/mimir.ingress.yaml
---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "mimir"
  namespace: "abuse-api-test"
spec:
  tls:
    - hosts:
      - "mimir.int.test-godaddy.com"
      secretName: tls-mimir
    - hosts:
      - "mimir.cset.int.test-gdcorp.tools"
      secretName: cset-wildcard
  rules:
  - host: "mimir.int.test-godaddy.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: "mimir"
          servicePort: 5000
  - host: "mimir.cset.int.test-gdcorp.tools"
    http:
      paths:
      - path: /
        backend:
          serviceName: "mimir"
          servicePort: 5000
